# ts-each

./: CHANGELOG.md  Cargo.toml  README.md  RELEASE.md  release.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
license/: APACHE  MIT
src/: main.rs
tests/mocks/unix/: ssh  tailscale
tests/mocks/windows/: ssh.cmd  ssh.rs  tailscale.cmd  tailscale.rs
