[package]
name = "ts-each"
version = "0.2.0"
edition = "2024"
description = "List tailscale peers (hosts), run commands on each of them, etc."
homepage = "https://github.com/CleanCut/ts-each"
repository = "https://github.com/CleanCut/ts-each"
readme = "README.md"
keywords = ["tailscale", "each", "ssh", "automation", "cli"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
exclude = [".gitignore", "release.toml"]

[dependencies]
anyhow = "1.0.100"
owo-colors = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
